src/test/deca/context/invalid/langage_essentiel/premiere_passe/regle_1_3_3.deca
class A {
}
class A {
}

// raison : opération partielle ⊕
// message : « classe ou type déjà déclaré »
